refactor post response struct
