# docs/swagger.json
@@ -950,6 +950,53 @@
                 }
             }
         },
+        "post.Item": {
+            "type": "object",
+            "properties": {
+                "comment_count": {
+                    "type": "integer"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "cover_url": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "digest": {
+                    "type": "string"
+                },
+                "draft_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "like_count": {
+                    "type": "integer"
+                },
+                "tag": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                },
+                "volume_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "post.LikeResp": {
             "type": "object",
             "properties": {
@@ -973,7 +1020,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/post.Post"
+                        "$ref": "#/definitions/post.Item"
                     }
                 },
                 "page": {
